--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-head">
+                            <div class="pin">
+                                <img src="/assets/img/pin.svg" alt="">
+                            </div>
                             <img src="./assets/img/bounty1.jpg" alt="">
                         </div>
                         <div class="card-body">
