--- a/index.html
+++ b/index.html
@@ -12,23 +12,15 @@
     </header>
     <main>
         <div class="container">
-            <div class="rowr">
-                <div class="col">
-                    <div class="card">
-                        <div class="card-head">
-                            <div class="pin">
-                                <img src="/assets/img/pin.svg" alt="">
-                            </div>
-                            <img src="./assets/img/bounty1.jpg" alt="">
-                        </div>
-                        <div class="card-body">
-                            <span>Lorem ipsum dolor sit.</span>
-                        </div>
-                    </div>
-                </div>
+            <div class="row">
+
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
+
