--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
             <div class="row">
 
             </div>
+
         </div>
     </main>
     <footer>
 
     </footer>
+    <div id="myModal" class="modal hide">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close-button"> X </button>
+            </div>
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
